Revision history for {{$dist->name}}

{{$NEXT}}

0.08      2018-02-27 10:57:06-05:00 America/New_York

  [API BREAKAGE]

    * Perl 5.10 is now the minimum version supported

    * the -create option is no longer available.  wrapper classes
      are always created.

    * modifying existing classes via -class is no longer supported
      as it proved too messy.

    * classes no longer subclass from Hash::Wrap::Base.

  [ENHANCEMENT]

    * stand alone wrapper classes are now possible via -base

    * wrapper classes can have real constructors via -new

    * documentation has been rewritten (again!)

    * wrapper classes can be subclassed

  [INTERNALS]

    * much code refactoring

    * accessor generation is now much simpler and subsequently faster.

    * construction of the wrapper classes is simplified (no more searching
      parent classes for validation and signature subroutinesbuilders), so
      mro::compat is not required.



0.07      2018-01-29 11:59:46-05:00 America/New_York

  [ENHANCEMENT]

    * exceptions are now thrown from the correct call frame

0.06      2018-01-29 11:59:46-05:00 America/New_York

  [ENHANCEMENT]

    * new options -exists and -undefined add exists() and defined()
      methods.

0.05      2018-01-29 11:59:46-05:00 America/New_York

  [BUILD FIX]

    * t/api.t was not completely updated for changes in version 0.04

0.04      2018-01-29 11:59:46-05:00 America/New_York

  [ENHANCEMENT]

    * it is now possible to create accessors which return undef
      (rather than throwing an exception) if a hash element does not
      exist.

    * The underlying code has gone through a significant rewrite.


0.03      2017-09-28 21:56:42-04:00 America/New_York

  [BUG FIX]

    * The default import of wrap_hash was broken by version 0.02.

0.02      2017-09-28 14:49:16-04:00 America/New_York

  [ENHANCEMENT]

    * lvalue accessors are now available for Perl 5.16 or later.

0.01      2017-09-25 11:50:04-04:00 America/New_York
