@@ -2,6 +2,12 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+  [ENHANCEMENT]
+
+    * wrap_hash may now be called with no arguments, in which
+      case it autogenerates a hash for you.
+
+
 0.08      2018-02-27 10:57:06-05:00 America/New_York
 
   [API BREAKAGE]
